objects/Report_Emailer_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Report_Export_File_Name__c</fullName>
        <inlineHelpText>This will be the file name of the export. Eg: filename.csv</inlineHelpText>
        <label>Report Export File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>